--- a/package.json
+++ b/package.json
@@ -3,37 +3,35 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
-    "@material-ui/core": "^4.9.5",
+    "@apollo/client": "^3.0.0-beta.41",
+    "@material-ui/core": "^4.9.8",
     "@material-ui/icons": "^4.9.1",
-    "@types/classnames": "^2.2.9",
-    "@types/jest": "^25.1.3",
-    "@types/node": "^13.7.7",
+    "@types/classnames": "^2.2.10",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.8",
     "@types/qs": "^6.9.1",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
+    "@types/react": "^16.9.31",
+    "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.3",
-    "apollo-boost": "^0.4.7",
-    "apollo-client": "^2.6.8",
-    "apollo-utilities": "^1.3.3",
     "classnames": "^2.2.6",
-    "graphql": "^14.6.0",
-    "qs": "^6.9.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1",
+    "graphql": "^14.6.0",
+    "prettier": "^2.0.2",
+    "qs": "^6.9.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
     "typescript": "~3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --fix src/**/*.{ts,tsx}"
   },
   "browserslist": {
     "production": [
