--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.0.0-beta.48",
-    "@material-ui/core": "^4.9.14",
+    "@apollo/client": "^3.0.0-rc.4",
+    "@apollo/link-context": "^2.0.0-beta.3",
+    "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
-    "@testing-library/dom": "^7.5.9",
-    "@testing-library/jest-dom": "^5.8.0",
-    "@testing-library/react": "^10.0.4",
-    "@testing-library/user-event": "^10.4.0",
+    "@testing-library/dom": "^7.16.1",
+    "@testing-library/jest-dom": "^5.10.1",
+    "@testing-library/react": "^10.2.1",
     "@types/classnames": "^2.2.10",
-    "@types/jest": "^25.2.2",
-    "@types/node": "^14.0.1",
-    "@types/qs": "^6.9.2",
-    "@types/react": "^16.9.35",
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
+    "@types/qs": "^6.9.3",
+    "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "classnames": "^2.2.6",
@@ -23,9 +23,9 @@
     "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "3.9.2"
+    "typescript": "3.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,6 +33,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "prettier --write src/**/*.{ts,tsx}"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
