--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@apollo/link-context": "^2.0.0-beta.3",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/dom": "^7.16.1",
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.2.1",
