--- a/package.json
+++ b/package.json
@@ -3,19 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.0.0-rc.10",
-    "@apollo/link-context": "^2.0.0-beta.3",
+    "@apollo/client": "^3.1.0-pre.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@testing-library/dom": "^7.20.0",
-    "@testing-library/jest-dom": "^5.11.0",
-    "@testing-library/react": "^10.4.4",
+    "@testing-library/dom": "^7.21.5",
+    "@testing-library/jest-dom": "^5.11.1",
+    "@testing-library/react": "^10.4.7",
     "@types/classnames": "^2.2.10",
-    "@types/jest": "^26.0.4",
-    "@types/node": "^14.0.19",
-    "@types/qs": "^6.9.3",
-    "@types/react": "^16.9.41",
+    "@types/jest": "^26.0.7",
+    "@types/node": "^14.0.26",
+    "@types/qs": "^6.9.4",
+    "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "classnames": "^2.2.6",
@@ -26,7 +25,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "3.9.6"
+    "subscriptions-transport-ws": "^0.9.17",
+    "typescript": "3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
