convert from cra to nextjs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "preserve"
   },
   "include": [
-    "src"
+    "src",
+    "setupTests.ts",
+    "components", "context/UserContext.tsx"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
