--- a/package.json
+++ b/package.json
@@ -1,54 +1,34 @@
 {
-  "name": "react-app",
+  "name": "nextjs-apollo-boilerplate",
   "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "@apollo/client": "^3.1.1",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@testing-library/dom": "^7.21.5",
-    "@testing-library/jest-dom": "^5.11.1",
-    "@testing-library/react": "^10.4.7",
-    "@types/classnames": "^2.2.10",
-    "@types/jest": "^26.0.7",
-    "@types/node": "^14.0.26",
-    "@types/qs": "^6.9.4",
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.5",
-    "classnames": "^2.2.6",
-    "graphql": "^15.3.0",
-    "prettier": "^2.0.5",
-    "qs": "^6.9.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "subscriptions-transport-ws": "^0.9.17",
-    "typescript": "3.9.7"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "test": "jest --watch",
     "format": "prettier --write src/**/*.{ts,tsx}"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "@apollo/client": "^3.1.3",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "graphql": "^15.3.0",
+    "next": "^9.5.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "subscriptions-transport-ws": "^0.9.17"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "proxy": "http://localhost:8000"
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.1",
+    "@testing-library/react": "^10.4.7",
+    "@types/babel-core": "^6.25.6",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
+    "@babel/core": "^7.11.4",
+    "babel-jest": "^26.3.0",
+    "jest": "^26.4.1",
+    "prettier": "^2.0.5",
+    "typescript": "3.9.7"
+  }
 }
