add env variables, rename alert to snackbar,  make snackbar state local in every component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,7 @@
   },
   "include": [
     "src",
-    "setupTests.ts",
-    "components", "context/UserContext.tsx"
+    "components"
   ],
   "exclude": [
     "node_modules"
