--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "test": "jest --watch",
+    "test": "jest",
     "format": "prettier --write src/**/*.{ts,tsx}"
   },
   "dependencies": {
