--- a/package.json
+++ b/package.json
@@ -10,25 +10,24 @@
     "format": "prettier --write src/**/*.{ts,tsx}"
   },
   "dependencies": {
-    "@apollo/client": "^3.2.0",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "graphql": "^15.3.0",
-    "next": "^9.5.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "subscriptions-transport-ws": "^0.9.18"
+    "@apollo/client": "^3.3.6",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "graphql": "^15.4.0",
+    "next": "^10.0.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.4",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
     "@types/babel-core": "^6.25.6",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
-    "@babel/core": "^7.11.6",
-    "babel-jest": "^26.3.0",
-    "jest": "^26.4.2",
-    "prettier": "^2.1.2",
-    "typescript": "3.9.7"
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@babel/core": "^7.12.10",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1",
+    "typescript": "4.1.3"
   }
 }
