--- a/package.json
+++ b/package.json
@@ -7,24 +7,24 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "format": "prettier --write src/**/*.{ts,tsx}"
+    "format": "prettier --write **/*.{ts,tsx}"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.6",
-    "@material-ui/core": "^4.11.2",
+    "@apollo/client": "^3.3.8",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "graphql": "^15.4.0",
-    "next": "^10.0.4",
+    "graphql": "^15.5.0",
+    "next": "^10.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "@types/babel-core": "^6.25.6",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
-    "@babel/core": "^7.12.10",
+    "@babel/core": "^7.12.13",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
