--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.13",
+    "@testing-library/dom": "^7.29.4",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.7.0",
     "@types/babel-core": "^6.25.6",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
-    "@babel/core": "^7.12.13",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
